--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,3 +1,11 @@
-body{
-  background-color: #000;
-}
+//Helpers
+@import "helpers/variables";
+@import "helpers/mixins";
+@import "base/base";
+@import "helpers/helpers";
+@import "helpers/utilities";
+
+//Components
+//layouts
+
+//Pages
