--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -25,6 +25,7 @@ h1,h2,h3,h4,h5,h6{
 body{
   font-size: 14px;
   font-family: $base-font;
+  background-color: $base-bg;
   font-weight: 400;
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
