--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,6 +6,11 @@
 @import "helpers/utilities";
 
 //Components
+@import "components/buttons";
+@import "components/froms";
+@import "components/dropdowns";
+@import "components/header";
+@import "components/hero-section";
 //layouts
-
+@import "layout/main";
 //Pages
