--- a/src/assets/scss/helpers/_mixins.scss
+++ b/src/assets/scss/helpers/_mixins.scss
@@ -160,7 +160,7 @@ Mixins styles here... */
 
 // Round Ball
 @mixin roundball {
-  @include border-radius(50%);
+  border-radius: 50%;
 }
 
 // Text Ellipsis
