--- a/src/assets/scss/helpers/_variables.scss
+++ b/src/assets/scss/helpers/_variables.scss
@@ -1,8 +1,9 @@
 //Fonts Stack
 $openSans: 'Open Sans', sans-serif;
-$Oswald: 'Oswald', sans-serif;
+$Gilroy:   'Roboto', sans-serif;
+$Oswald:   'Oswald', sans-serif;
 //System Fonts
-$base-font:    $openSans;
+$base-font:    $Gilroy;
 $heading-font: $Oswald;
 
 //Colors
