--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -23,11 +23,11 @@ h1,h2,h3,h4,h5,h6{
   font-family: $heading-font;
 }
 body{
-  font-size: 14px;
+  font-size: 16px;
   font-family: $base-font;
   background-color: $base-bg;
-  font-weight: 400;
-  line-height: 1.6;
+  font-weight: 500;
+  line-height: 32px;
   -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
 
