--- a/src/assets/scss/components/_dropdowns.scss
+++ b/src/assets/scss/components/_dropdowns.scss
@@ -9,14 +9,14 @@
     }
   }
   .dropdown-menu {
-    --bs-dropdown-font-size: 1rem;
+    --bs-dropdown-font-size: 14px;
     --bs-dropdown-min-width: 136px;
     --bs-dropdown-padding-x: 0;
     --bs-dropdown-padding-y: 0;
     --bs-dropdown-border-color: #9CA69C;
     --bs-dropdown-border-radius: 5px;
     --bs-dropdown-divider-margin-y: 0;
-    --bs-dropdown-link-color: #212529;
+    --bs-dropdown-link-color: #123150;
     --bs-dropdown-link-hover-color: #1e2125;
     --bs-dropdown-link-hover-bg: rgba(18, 49, 80, 0.05);
     --bs-dropdown-link-active-color: $blue;
@@ -25,48 +25,6 @@
     --bs-dropdown-item-padding-x: 12px;
     --bs-dropdown-item-padding-y: 0px;
   }
-  //.dropdown-menu {
-  //  --bs-dropdown-zindex: 1000;
-  //  --bs-dropdown-min-width: 10rem;
-  //  --bs-dropdown-padding-x: 0;
-  //  --bs-dropdown-padding-y: 0.5rem;
-  //  --bs-dropdown-spacer: 0.125rem;
-  //  --bs-dropdown-font-size: 1rem;
-  //  --bs-dropdown-color: #212529;
-  //  --bs-dropdown-bg: #fff;
-  //  --bs-dropdown-border-color: var(--bs-border-color-translucent);
-  //  --bs-dropdown-border-radius: 0.375rem;
-  //  --bs-dropdown-border-width: 1px;
-  //  --bs-dropdown-inner-border-radius: calc(0.375rem - 1px);
-  //  --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
-  //  --bs-dropdown-divider-margin-y: 0.5rem;
-  //  --bs-dropdown-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  //  --bs-dropdown-link-color: #212529;
-  //  --bs-dropdown-link-hover-color: #1e2125;
-  //  --bs-dropdown-link-hover-bg: #e9ecef;
-  //  --bs-dropdown-link-active-color: #fff;
-  //  --bs-dropdown-link-active-bg: #0d6efd;
-  //  --bs-dropdown-link-disabled-color: #adb5bd;
-  //  --bs-dropdown-item-padding-x: 1rem;
-  //  --bs-dropdown-item-padding-y: 0.25rem;
-  //  --bs-dropdown-header-color: #6c757d;
-  //  --bs-dropdown-header-padding-x: 1rem;
-  //  --bs-dropdown-header-padding-y: 0.5rem;
-  //  position: absolute;
-  //  z-index: var(--bs-dropdown-zindex);
-  //  display: none;
-  //  min-width: var(--bs-dropdown-min-width);
-  //  padding: var(--bs-dropdown-padding-y) var(--bs-dropdown-padding-x);
-  //  margin: 0;
-  //  font-size: var(--bs-dropdown-font-size);
-  //  color: var(--bs-dropdown-color);
-  //  text-align: left;
-  //  list-style: none;
-  //  background-color: var(--bs-dropdown-bg);
-  //  background-clip: padding-box;
-  //  border: var(--bs-dropdown-border-width) solid var(--bs-dropdown-border-color);
-  //  border-radius: var(--bs-dropdown-border-radius);
-  //}
 
   &.language-dropdown{
     .btn{
