--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -6,6 +6,7 @@
   width: 100%;
   padding: 15px 30px;
   color: $white;
+  z-index: 99999;
   .header-base{
     display: flex;
     flex-direction: column;
