--- a/src/assets/scss/components/_hero-section.scss
+++ b/src/assets/scss/components/_hero-section.scss
@@ -3,7 +3,10 @@
   height: 100vh;
   position: relative;
   .bg-img{
-    @include size(100%,100%);
+    @include size(100%,100vh);
+    position: absolute;
+    top: 0;
+    left: 0;
     img{
       @include size(100%,100%);
       object-fit: cover;
@@ -11,11 +14,12 @@
   }
   .hero-content{
     @include absolute(0,0);
-    @include size(100%,100%);
+    @include size(100%,100vh);
     padding-bottom: 110px;
     display: flex;
     align-items: flex-end;
     color: $white;
+    z-index: 9;
 
     h3{
       font-size: 54px;
@@ -63,6 +67,6 @@
 
 //item-slider
 .item-slider{
-  height: 100%;
+  height: 100vh;
   position: relative;
 }
