--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -11,6 +11,9 @@
 @import "components/dropdowns";
 @import "components/header";
 @import "components/hero-section";
+//Sections
+@import "sections/about";
 //layouts
 @import "layout/main";
 //Pages
+@import "pages/commons";
