--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -26,6 +26,7 @@ body{
   font-size: 16px;
   font-family: $base-font;
   background-color: $base-bg;
+  color: $black;
   font-weight: 500;
   line-height: 32px;
   -webkit-font-smoothing: antialiased;
