--- a/src/assets/scss/helpers/_helpers.scss
+++ b/src/assets/scss/helpers/_helpers.scss
@@ -6,3 +6,14 @@
 .cursor-pointer{
   cursor: pointer;
 }
+
+//Section space
+.section-space-y{
+  padding: 50px 0;
+}
+.section-space-top{
+  padding-top: 50px;
+}
+.section-space-bottom{
+  padding-bottom: 50px;
+}
