who attend card

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -11,6 +11,7 @@
 @import "components/dropdowns";
 @import "components/header";
 @import "components/hero-section";
+@import "components/card-icon-text";
 //Sections
 @import "sections/about";
 //layouts
