--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -23,9 +23,9 @@ h1,h2,h3,h4,h5,h6{
   font-family: $heading-font;
 }
 body{
-  font-size: 16px;
+  font-size: 14px;
   font-family: $base-font;
-  background-color: $base-bg;
+  background-color: #F5F4FB;
   color: $black;
   font-weight: 500;
   line-height: 32px;
