--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -12,6 +12,7 @@
 @import "components/header";
 @import "components/hero-section";
 @import "components/card-icon-text";
+@import "components/card-img-text";
 //Sections
 @import "sections/about";
 //layouts
