--- a/src/assets/scss/pages/_commons.scss
+++ b/src/assets/scss/pages/_commons.scss
@@ -1,6 +1,6 @@
 .section-header{
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 35px;
   p{
     font-size: 14px;
     font-weight: 600;
@@ -48,8 +48,9 @@
     margin-top: 40px;
   }
   .content{
+    padding-right: 50px;
     p{
-      font-size: 16px;
+      font-size: 14px;
       font-weight: 400;
       line-height: 26px;
       color: #59566F;
@@ -59,3 +60,4 @@
     min-height: 158px;
   }
 }
+
