--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -3,4 +3,22 @@
   &.btn-flat{
     border: none;
   }
+
+
+//  btn-invite
+  &.btn-invite{
+    border-radius: 0;
+    height: 58px;
+    width: 300px;
+    font-size: 16px;
+    font-weight: 700;
+    font-family: $Gilroy;
+    border-color: $green;
+    border-width: 2px;
+    color: $green;
+    &:hover{
+      background-color: $green;
+      color: $white;
+    }
+  }
 }
