--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -13,6 +13,7 @@
 @import "components/hero-section";
 @import "components/card-icon-text";
 @import "components/card-img-text";
+@import "components/card-key-topic";
 //Sections
 @import "sections/about";
 //layouts
