--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -14,6 +14,7 @@
 @import "components/card-icon-text";
 @import "components/card-img-text";
 @import "components/card-key-topic";
+@import "components/card-news";
 //Sections
 @import "sections/about";
 //layouts
