--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -9,6 +9,7 @@
 @import "components/buttons";
 @import "components/froms";
 @import "components/dropdowns";
+@import "components/accordion";
 @import "components/header";
 @import "components/hero-section";
 @import "components/card-icon-text";
