--- a/src/assets/scss/pages/_commons.scss
+++ b/src/assets/scss/pages/_commons.scss
@@ -61,7 +61,11 @@
   }
 }
 
-//key-topic
-.key-topic{
-  
+//faq-section
+.faq-section{
+  padding: 140px 0 80px 0;
+  background-image: url("/assets/images/faq-bg.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
