--- a/src/assets/scss/pages/_commons.scss
+++ b/src/assets/scss/pages/_commons.scss
@@ -258,3 +258,13 @@
     }
   }
 }
+//Page Shape
+.page-shape-dot{
+  position: absolute;
+  left: 0;
+  top: 330px;
+  z-index: -1;
+  img{
+    height: 1000px;
+  }
+}
