--- a/src/assets/scss/pages/_commons.scss
+++ b/src/assets/scss/pages/_commons.scss
@@ -287,3 +287,18 @@
     margin-bottom: 40px;
   }
 }
+
+//card-title-text
+.card-title-text{
+  margin-bottom: 30px;
+  text-align: center;
+
+  h3{
+    font-size: 40px;
+    color: $blue;
+    font-weight: 500;
+    font-family: $Oswald;
+    text-transform: uppercase;
+    margin-bottom: 38px;
+  }
+}
