--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -16,6 +16,7 @@
 @import "components/card-img-text";
 @import "components/card-key-topic";
 @import "components/card-news";
+@import "components/card-pl-committee";
 //Sections
 @import "sections/about";
 //layouts
