--- a/src/assets/scss/pages/_commons.scss
+++ b/src/assets/scss/pages/_commons.scss
@@ -413,3 +413,100 @@
     }
   }
 }
+
+//peduase-page
+.peduase-page{
+  background-color: $blue;
+
+  .card-address{
+    background-color: $white;
+    padding: 40px 150px;
+
+    .title{
+      text-align: center;
+      h3{
+        font-size: 40px;
+        color: $blue;
+        font-weight: 500;
+        font-family: $Oswald;
+        text-transform: uppercase;
+        margin-bottom: 50px;
+      }
+    }
+    .card-row{
+      display: flex;
+      align-items: flex-start;
+      border-bottom: 1px solid #D9D9D9;
+      padding-bottom: 50px;
+      .card-date{
+        min-width: 160px;
+
+        h3{
+          font-size: 16px;
+          font-weight: 700;
+          font-family: $Gilroy;
+          color: #030303;
+          text-transform: uppercase;
+        }
+      }
+      .card-desc{
+        border-left: 1px solid #D9D9D9;
+        padding-left: 70px;
+
+        .hosted{
+          font-size: 20px;
+          font-weight: 700;
+          font-family: $Gilroy;
+          color: #123150;
+          margin-bottom: 20px;
+        }
+
+        .card-box{
+          display: flex;
+          align-items: center;
+          .icon{
+            @include size(60px,60px);
+            background-color: $green;
+            border-radius: 50%;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            img{
+              @include size(100%,100%);
+              object-fit: cover;
+            }
+          }
+          .name{
+            margin-left: 30px;
+            h3{
+              font-size: 20px;
+              color: $green;
+              font-weight: 700;
+              text-transform: uppercase;
+              margin-bottom: 5px;
+            }
+            p{
+              font-size: 14px;
+              font-weight: 600;
+              color: #000000;
+              margin: 0;
+            }
+          }
+        }
+        .card-location{
+          display: flex;
+          align-items: center;
+          margin-top: 30px;
+
+          p{
+            margin: 0 0 0 20px;
+            font-size: 20px;
+            font-weight: 700;
+            color: $blue;
+          }
+        }
+      }
+    }
+  }
+}
