--- a/src/assets/scss/pages/_commons.scss
+++ b/src/assets/scss/pages/_commons.scss
@@ -512,3 +512,39 @@
     }
   }
 }
+
+//protocols-section
+.protocols-section{
+  padding: 60px 100px;
+
+  .title{
+    text-align: center;
+    margin-bottom: 70px;
+    h3{
+      font-size: 32px;
+      font-weight: 700;
+      color: $blue;
+      max-width: 800px;
+      margin: 0 auto;
+      text-transform: uppercase;
+    }
+  }
+
+  .protocols-card{
+    border-left: 7px solid $green;
+    padding-left: 30px;
+    margin-bottom: 70px;
+    h3{
+      font-size: 32px;
+      font-weight: 600;
+      color: $green;
+      font-family: $Oswald;
+      text-transform: uppercase;
+      margin-bottom: 20px;
+    }
+    p{
+      font-size: 24px;
+      line-height: 48px;
+    }
+  }
+}
