--- a/src/assets/scss/pages/_commons.scss
+++ b/src/assets/scss/pages/_commons.scss
@@ -404,6 +404,11 @@
     margin-bottom: 40px;
     border-left: 7px solid $green;
     padding-left: 30px;
+    h4{
+      font-weight: 500;
+      font-size: 32px;
+      line-height: 64px;
+    }
     p{
       font-weight: 600;
       a{
