--- a/src/assets/scss/components/_hero-section.scss
+++ b/src/assets/scss/components/_hero-section.scss
@@ -88,11 +88,9 @@
     height: 100%;
     z-index: 1;
     display: flex;
-    align-items: flex-end;
-    padding-bottom: 130px;
+    padding-top: 290px;
     .content-inner{
       width: 100%;
-
       .content{
         h3{
           font-size: 64px;
