--- a/src/assets/scss/pages/_commons.scss
+++ b/src/assets/scss/pages/_commons.scss
@@ -553,3 +553,96 @@
     }
   }
 }
+
+//Help page
+.map-section{
+  img{
+    width: 100%;
+  }
+}
+
+.contact-section{
+  padding: 40px 0;
+}
+.contact-detail{
+  h3{
+    font-size: 32px;
+    font-weight: 600;
+    color: $blue;
+    font-family: $Oswald;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+  }
+  ul{
+    li{
+      display: flex;
+      align-items: center;
+      padding: 12px 0;
+      span{
+        font-size: 18px;
+        color: $dark-gray;
+        font-weight: 500;
+        letter-spacing: 0.03em;
+        img{
+          margin-right: 14px;
+        }
+      }
+    }
+  }
+  p{
+    font-size: 18px;
+    color: $dark-gray;
+    font-weight: 500;
+    letter-spacing: 0.03em;
+    margin-top: 12px;
+  }
+}
+
+//form-item
+.form-item{
+  margin-bottom: 20px;
+  label{
+    font-size: 10px;
+    font-weight: 700;
+    color: $green;
+    letter-spacing: 0.3em;
+    font-family: $Gilroy;
+    text-transform: uppercase;
+    margin-bottom: 0;
+  }
+  .form-control{
+    border-width: 0 0 1px 0;
+    border-color: #2D2D2D;
+    border-style: solid;
+    background-color: transparent;
+    border-radius: 0;
+    padding: 8px 0;
+    &:focus{
+      box-shadow: none;
+      outline: none;
+    }
+  }
+
+  &.form-checkbox{
+    label{
+      font-size: 12px;
+      font-weight: 500;
+      color: #1E1E1E;
+      letter-spacing: 0.04em;
+      font-family: $Oswald;
+      padding-left: 5px;
+      cursor: pointer;
+    }
+  }
+
+  .form-submit{
+    @include size(207px,54px);
+    background-color: $green;
+    color: $white;
+    font-size: 16px;
+    font-weight: 800;
+    display: block;
+    border: none;
+    text-transform: uppercase;
+  }
+}
