--- a/src/assets/scss/pages/_commons.scss
+++ b/src/assets/scss/pages/_commons.scss
@@ -646,3 +646,118 @@
     text-transform: uppercase;
   }
 }
+
+//registration-section
+.registration-section{
+  padding: 40px 70px;
+
+  .registration-head{
+    span{
+      font-size: 13px;
+      font-weight: 600;
+      color: $black;
+      display: block;
+    }
+    h3{
+      font-size: 14px;
+      font-weight: 700;
+      letter-spacing: 0.3em;
+      text-transform: uppercase;
+      color: $green;
+      margin-bottom: 30px;
+    }
+  }
+  .regi-form{
+    .form-control{
+      border-width: 0 0 1px 0;
+      border-style: solid;
+      border-color: #2D2D2D;
+      background-color: transparent;
+      border-radius: 0;
+      font-weight: 600;
+      height: 58px;
+      margin-bottom: 30px;
+      font-size: 12px;
+      font-family: $Gilroy;
+      &:focus{
+        box-shadow: none;
+        outline: 0;
+      }
+      @include input-placeholder{
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+        color: #1E1E1E;
+        font-size: 12px;
+        font-weight: 600;
+        font-family: $Gilroy;
+      }
+    }
+    label{
+      letter-spacing: 0.3em;
+      text-transform: uppercase;
+      font-weight: 700;
+      font-size: 10px;
+      font-family: $Gilroy;
+      display: block;
+      color: $green;
+    }
+    select{
+      border-width: 0 0 1px 0;
+      border-style: solid;
+      border-color: #2D2D2D;
+      background-color: transparent;
+      border-radius: 0;
+      font-weight: 600;
+      height: 58px;
+      margin-bottom: 30px;
+      font-size: 12px;
+      font-family: $Gilroy;
+      width: 100%;
+      text-transform: uppercase;
+      padding: 12px 10px;
+      &:focus{
+        box-shadow: none;
+        outline: 0;
+      }
+    }
+
+    &.regi-checkbox{
+      display: flex;
+      align-items: center;
+      label{
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+        font-weight: 500;
+        font-size: 12px;
+        font-family: $Oswald;
+        color: #1E1E1E;
+        cursor: pointer;
+      }
+    }
+
+    .btn-reg{
+      width: 207px;
+      height: 54px;
+      background: #00A139;
+      font-weight: 800;
+      font-size: 16px;
+      line-height: 20px;
+      text-transform: uppercase;
+      color: #FFFFFF;
+      font-family: $Gilroy;
+      border-radius: 0;
+      margin-top: 50px;
+    }
+  }
+  .registration-summit{
+    margin-top: 20px;
+    margin-bottom: 15px;
+    h3{
+      font-weight: 600;
+      font-size: 36px;
+      text-transform: uppercase;
+      color: #000000;
+      font-family: $Oswald;
+    }
+  }
+}
